--- a/contactus.html
+++ b/contactus.html
@@ -46,13 +46,15 @@
         <div>
             <p style="font-weight:bold;color:navy;font-weight: bold">3. What's included in a standard cleaning?</p> 
         </div>
+        <div>
+            <p>Our standard cleaning covers:</p><br>
+              <p>-Dusting & Wiping Surfaces</p><br>
+               <p>-Vacuuming & Mopping Floors</p><br>
+                <p>-Bathroom & Kitchen Sanitization</p><br>
+             <p>-Trash Removal.</p><br>
+          <p>For deep cleaning, we include baseboards, inside cabinets and appliances upon request.</p>
+        </div>
         
-        Our standard cleaning covers:<br>
-        -Dusting & Wiping Surfaces<br>
-        -Vacuuming & Mopping Floors<br>
-        -Bathroom & Kitchen Sanitization<br>
-        -Trash Removal.<br>
-        For deep cleaning, we include baseboards, inside cabinets and appliances upon request.
         <p style="font-weight:bold;color:navy;font-weight: bold">4. How much do your services cost?</p>
         Pricing depends on home size, cleaning type, and frequency. Contact us for free quote or visit
         chrismatlala.com to see our pricing packages.
