--- a/services.html
+++ b/services.html
@@ -7,8 +7,7 @@
 
         <style>
             body {
-                background-image:url(images/cleanliness.jpg);
-                background-size:cover;
+                background-color: beige;
             }
         </style>
     </head>
