--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         </style>
         <style>
             body {
-                background-image:url(images/cleanliness.jpg);
-                background-size:cover;
+                background-color: beige;
             }
         </style>
 
