--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
            </div>
            
         <br>
-        <img src="images/girl.jpg">
+        <img src="images/cleanliness.jpg">
         </body>
 </html>
