--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <body>
             <nav class="navbar"></nav>
             <div class="navdiv">
-                <div class="logo"><a href="default.asp">SparklePro</a> </div>
+                <div class="logo"><a href="#">SparklePro</a> </div>
             </div>
             <ul>
-                <li><a href="home.asp">Home</a></li>
-                <li><a href="services">Services</a></li>
-                <li><a href="news.asp">News</a></li>
-                <li><a href="aboutus.asp">About Us</a></li>
-                <li><a href="contactus.asp">Contact Us</a></li>
-                <button><a href="signin.asp">SignIn</a></button>
-                <button><a href="signout.asp">SignOut</a></button>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <button><a href="#">SignIn</a></button>
+                <button><a href="#">SignOut</a></button>
             </ul>
             <a href="index.html">Home</a><br>
             <a href="services.html">Services</a><br>
