--- a/services.html
+++ b/services.html
@@ -7,11 +7,11 @@
 
         <style>
             body {
-                background-color: beige;
+                background-color:lightgray;
             }
         </style>
     </head>
-    <body style="background-color:lightgray">
+    <body>
         
         <a href="index.html">Home</a><br>
         <a href="services.html">Services</a><br>
