--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
 
         <style>
             body {
-                background-color:beige;
+                background-color:lightgray;
             }
         </style>
     </head>
