--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </style>
         <style>
             body {
-                background-color: beige;
+                background-color:lightgray;
             }
         </style>
 
