--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
 
         <a href="contactus.html">Contact Us</a><br>
         <h1>CONTACT US</h1>
-        <address style="font-size:120%;color:navy">
+        <address style="font-size:120%;color:black">
             Visit us at:chrismatlala.com<br>
             Email:Chris.matlala@sparklepro.com<br>
             Phone number: (063) 820 8064<br>
@@ -31,7 +31,7 @@
             0748<br>
             South Africa<br>
         </address>
-        <p style="text-align: center;color:navy;font-weight: bold;">Let SparklePro Cleaning Services bring the sparkle
+        <p style="text-align: center;color:black;font-weight: bold;">Let SparklePro Cleaning Services bring the sparkle
              to your home or business.</p>
         <p style="text-align:center;font-family: Verdana, Geneva, Tahoma, sans-serif;">BOOK YOUR CLEANING TODAY!</p>
         <br>
@@ -39,11 +39,11 @@
         <p>1. What areas do you service?</p>
         We currently serve in areas around Polokwane and Mokopane, and we are expanding! Contact us  to 
         check availability in your area.
-        <p style="font-weight:bold;color:navy;font-weight: bold">2. Do you use eco-friendly cleaning products?</p>
+        <p style="font-weight:bold;color:black;font-weight: bold">2. Do you use eco-friendly cleaning products?</p>
         Yes! We offer green cleaning options using non-toxic, biodegradable products safe for pets, children, and
         allergy-sensitive customers.
         <div>
-            <p style="font-weight:bold;color:navy;font-weight: bold">3. What's included in a standard cleaning?</p> 
+            <p style="font-weight:bold;color:black;font-weight: bold">3. What's included in a standard cleaning?</p> 
         </div>
         <div>
             <p>Our standard cleaning covers:</p><br>
@@ -54,13 +54,13 @@
           <p>For deep cleaning, we include baseboards, inside cabinets and appliances upon request.</p>
         </div>
         
-        <p style="font-weight:bold;color:navy;font-weight: bold">4. How much do your services cost?</p>
+        <p style="font-weight:bold;color:black;font-weight: bold">4. How much do your services cost?</p>
         Pricing depends on home size, cleaning type, and frequency. Contact us for free quote or visit
         chrismatlala.com to see our pricing packages.
-        <p style="font-weight:bold;color:navy;font-weight: bold">5. Are your cleaners insured and background-checked?</p>
+        <p style="font-weight:bold;color:black;font-weight: bold">5. Are your cleaners insured and background-checked?</p>
         Absolutely! All SparklePro cleaners are fully insured, trained and background-checked for your 
         safety and peace of mind.
-        <p style="font-weight:bold;color:navy;font-weight: bold">6. What is not satisfied with my cleaning</p>
+        <p style="font-weight:bold;color:black;font-weight: bold">6. What is not satisfied with my cleaning</p>
         We offer a 100% Satisfaction guarantee- if you are not, happy we'le re-clean the area at no 
         extra cost.
         <br>
