--- a/contactus.html
+++ b/contactus.html
@@ -36,7 +36,7 @@
         <p style="text-align:center;font-family: Verdana, Geneva, Tahoma, sans-serif;">BOOK YOUR CLEANING TODAY!</p>
         <br>
         <p style="font-weight:bold;text-align:center;font-size:150%">Frequently Asked Questions</p>
-        <p>1. What areas do you service?</p>
+        <p style="font-weight:bold;color:black;font-weight: bold">1. What areas do you service?</p>
         We currently serve in areas around Polokwane and Mokopane, and we are expanding! Contact us  to 
         check availability in your area.
         <p style="font-weight:bold;color:black;font-weight: bold">2. Do you use eco-friendly cleaning products?</p>
