--- a/contactus.html
+++ b/contactus.html
@@ -46,11 +46,11 @@
             <p style="font-weight:bold;color:black;font-weight: bold">3. What's included in a standard cleaning?</p> 
         </div>
         <div>
-            <p>Our standard cleaning covers:</p><br>
-              <p>-Dusting & Wiping Surfaces</p><br>
-               <p>-Vacuuming & Mopping Floors</p><br>
-                <p>-Bathroom & Kitchen Sanitization</p><br>
-             <p>-Trash Removal.</p><br>
+            <p>Our standard cleaning covers:</p>
+              <p>-Dusting & Wiping Surfaces</p>
+               <p>-Vacuuming & Mopping Floors</p>
+                <p>-Bathroom & Kitchen Sanitization</p>
+             <p>-Trash Removal.</p>
           <p>For deep cleaning, we include baseboards, inside cabinets and appliances upon request.</p>
         </div>
         
