--- a/contactus.html
+++ b/contactus.html
@@ -60,7 +60,7 @@
         <p style="font-weight:bold;color:black;font-weight: bold">5. Are your cleaners insured and background-checked?</p>
         Absolutely! All SparklePro cleaners are fully insured, trained and background-checked for your 
         safety and peace of mind.
-        <p style="font-weight:bold;color:black;font-weight: bold">6. What is not satisfied with my cleaning</p>
+        <p style="font-weight:bold;color:black;font-weight: bold">6. What is not satisfied with my cleaning?</p>
         We offer a 100% Satisfaction guarantee- if you are not, happy we'le re-clean the area at no 
         extra cost.
         <br>
