--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 text-decoration:none;
             }
             .navbar {
-                background-color:crimson;font-family:'Times New Roman', Times, serif;
+                background-color:aqua;font-family:'Times New Roman', Times, serif;
                 padding:0;padding:0;
             }
             .navdiv {
