--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 text-decoration:none;
             }
             .navbar {
-                background-color:aqua;font-family:'Times New Roman', Times, serif;
-                padding:0;padding:0;
+                background:aqua;font-family:'Times New Roman', Times, serif;
+                padding-right: 15px;padding-left: 15px;
             }
             .navdiv {
                 display:flex;align-items:center;justify-content:space-between;
