--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>SparklePro Cleaning Services | Home</title>
         <link rel="icon" type="image/x-icon" href="images/s.png">
 
@@ -12,23 +14,23 @@
                 text-decoration:none;
             }
             .navbar {
-                background:aqua;font-family:'Times New Roman', Times, serif;
+                background:aqua;font-family:Arial, Helvetica, sans-serif;
                 padding-right: 15px;padding-left: 15px;
             }
             .navdiv {
                 display:flex;align-items:center;justify-content:space-between;
             }
             .logo a{
-                font-size:40px;font-weight:500;color:black;
+                font-size:40px;font-weight:500;color:crimson;
             }
             li {
                 list-style:none;display:inline-block
             }
             li a{
-                color:black;font-size:15px;font-weight:bold;margin:0;
+                color:black;font-size:15px;font-weight:bold;margin-right: 25px;
             }
             button {
-                background-color:white;margin:0;border-radius:0;padding:0;
+                background-color:white;margin-left: 10px;border-radius:10px;padding:10px;
                 width:90px;
             }
             button a{
