--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>SparklePro Cleaning Services | About Us</title>
+        <title>SparklePro | About Us</title>
         <link rel="icon" type="image/x-icon" href="images/s.png">
 
         <link rel="stylesheet" href="css/files.css">
