--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>SparklePro Cleaning Services | Home</title>
+        <title>SparklePro | Home</title>
         <link rel="icon" type="image/x-icon" href="images/s.png">
 
         <link rel="stylesheet" href="css/files.css">
