--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>SparklePro Cleaning Services | News</title>
+        <title>SparklePro | News</title>
         <link rel="icon" type="image/x-icon" href="images/s.png">
 
         <link rel="stylesheet" href="css/files.css">
