--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
            </p>
            <h2 style="text-align: center;">WHY CHOOSE SPARKLEPRO</h2>
               <div>
-              <p>1. Experienced & Reliable Team- Our trained professionals ensure quality and effeciency.</p><br>
-                <p>2. Eco-Friendly products- Safe for your family, pets and the environment</p><br>
-                 <p>3. Customized Cleaning Plans- Services tailored to your specific needs.</p><br>
+              <p>1. Experienced & Reliable Team- Our trained professionals ensure quality and effeciency.</p>
+                <p>2. Eco-Friendly products- Safe for your family, pets and the environment</p>
+                 <p>3. Customized Cleaning Plans- Services tailored to your specific needs.</p>
               <p>4. Affordable Pricing- Quality cleaning at competitive rates.</p>
            </div>
            
