--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <div class="logo"><a href="#">SparklePro</a> </div>
             </div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
                 <button><a href="#">SignIn</a></button>
                 <button><a href="#">SignOut</a></button>
             </ul>
