--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <li><a href="news.html">News</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
+                <button><a href="#">SignIn</a></button>
+                <button><a href="#">SignOut</a></button>
             </ul>
             <a href="index.html">Home</a><br>
             <a href="services.html">Services</a><br>
