--- a/services.html
+++ b/services.html
@@ -12,6 +12,15 @@
         </style>
     </head>
     <body>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="contactus.html">Contact Us</a></li>
+        <button><a href="#">SignIn</a></button>
+        <button><a href="#">SignOut</a></button>
+        </ul>
         
         <a href="index.html">Home</a><br>
         <a href="services.html">Services</a><br>
