--- a/services.html
+++ b/services.html
@@ -12,6 +12,10 @@
         </style>
     </head>
     <body>
+      <nav class="navbar"></nav>
+      <div class="navdiv">
+       <div class="logo"><a href="#">SparklePro</a> </div>
+      </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
