--- a/news.html
+++ b/news.html
@@ -30,19 +30,19 @@
         <h1>NEWS</h1>
 
         <p style="font-size:130%;font-family:'Times New Roman', Times, serif">Latest News and Updates</p>
-        <p>*Exciting Expansion-We are excited to introduce Eco-Friendly Cleaning Packages, featuring non-toxic,
-             biodegradable products for a safer home and workplace.<br>
-             <br>
-        *New Loyalty Program  Earn Rewards!
-           We appreciate our amazing customers! With our new Sparkle Rewards Program, you can earn points for every
-           cleaning service you book
-            and redeem them for discounts,
-            free add-ons, or even a complimentary deep clean!<br>
-            <br>
-        *Spring Cleaning Special- Limited Time Offer!
-            Get 15% off all deep cleaning services booked before the 21st of March! Spring is the perfect time to refresh
-             your home or office, and we are here to help.</p>   
-
+        <div>
+            <p>*Exciting Expansion-We are excited to introduce Eco-Friendly Cleaning Packages, featuring non-toxic,
+                biodegradable products for a safer home and workplace.</p><br>
+                <p>*New Loyalty Program  Earn Rewards!
+                    We appreciate our amazing customers! With our new Sparkle Rewards Program, you can earn points for every
+                    cleaning service you book
+                     and redeem them for discounts,
+                     free add-ons, or even a complimentary deep clean!</p><br>
+                     <p>*Spring Cleaning Special- Limited Time Offer!
+                        Get 15% off all deep cleaning services booked before the 21st of March! Spring is the perfect time to refresh
+                         your home or office, and we are here to help.</p>
+        </div>
+           
         <img src="images/special.png" width="980" height="400">
     </body>
     </html>
