--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
         <p style="font-size:130%;font-family:'Times New Roman', Times, serif">Latest News and Updates</p>
         <div>
             <p>*Exciting Expansion-We are excited to introduce Eco-Friendly Cleaning Packages, featuring non-toxic,
-                biodegradable products for a safer home and workplace.</p><
+                biodegradable products for a safer home and workplace.</p>
                 <p>*New Loyalty Program  Earn Rewards!
                     We appreciate our amazing customers! With our new Sparkle Rewards Program, you can earn points for every
                     cleaning service you book
