--- a/aboutus.html
+++ b/aboutus.html
@@ -40,28 +40,29 @@
         <p style="text-align:center;font-size:150%;color:rgb(119, 12, 33)">LET US HANDLE THE CLEANING, SO YOU CAN FOCUS ON WHAT MATTERS MOST.</p>
         <h2>TEAM</h2>
         <br>
-         <span style="color:navy">
-            OUR DIRECTORS<br>
+        <span> OUR DIRECTORS<br></span>
+        <br>
+         <span>
             Chris Matlala<br>
             Founder & Director    
          </span>
          <br>
-         <span style="color:navy">
+         <span>
             Castro Mathake<br>
             Manager<br>   
          </span>
          <br>
-         <span style="color:navy">
+         <span>
             Poelano Machaka<br>
             Operations Manager<br>
          </span>
          <br>
-         <span style="color:navy">
+         <span>
             Koketso Mosupye<br>
             Sales Consultant<br>  
          </span>
          <br>
-         <span style="color:navy">
+         <span>
             Tau Magopane<br>
             Finance Manager<br>
          </span>
