--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@
         <br>
          <span>
             Chris Matlala<br>
-            Founder & Director    
+            Founder & Director<br>   
          </span>
          <br>
          <span>
