--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
         <p style="text-align:center;font-size:150%;color:rgb(119, 12, 33)">LET US HANDLE THE CLEANING, SO YOU CAN FOCUS ON WHAT MATTERS MOST.</p>
         <h2>TEAM</h2>
         <br>
-        <span> OUR DIRECTORS<br></span>
+        <span> OUR DIRECTORS</span>
         <br>
          <span>
             Chris Matlala<br>
