--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
 
         <h1>ABOUT US</h1>
     
-        <p style="color:rgb(119, 12, 33)">Welcome to SparklePro Cleaning Services,
+        <p>Welcome to SparklePro Cleaning Services,
             your trusted partner in creating cleaner, healthier spaces. Founded
            in 2023, we are committed to delivering top-tier cleaning solutions for homes, offices, and commercial properties.
            At SparklePro, we believe that a clean environment enhances well-being, productivity, and peace of mind.
@@ -37,7 +37,8 @@
            and industry-best practices. Whether you need routine maintainance, deep cleaning, or specialised services, we 
            tailor our approach to meet your unique needs.</p>
 
-        <p style="text-align:center;font-size:150%;color:rgb(119, 12, 33)">LET US HANDLE THE CLEANING, SO YOU CAN FOCUS ON WHAT MATTERS MOST.</p>
+        <p style="text-align:center;font-size:150%;color:rgb(119, 12, 33)">LET US HANDLE THE CLEANING, SO YOU CAN FOCUS
+             ON WHAT MATTERS MOST.</p>
         <h2>TEAM</h2>
         <br>
         <span> OUR DIRECTORS</span>
