--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
            </div>
            
         <br>
-        <img src="images/cleanliness.jpg">
+        <img src="images/cleanliness.jpg" width="800" height="500">
         </body>
 </html>
