--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
                     <p>Keeping your workplace spotless for a healthier, more productive environment.</p>
                </div>
                <div>
-                  <h2>Post Construction Cleaning</h2>
+                  <h2>Post Construction Cleaning.</h2>
                     <p>Remove dust, debris, and leftover materials for a move-in ready space.</p>
                </div>
                <div>
