--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 <button><a href="#">SignIn</a></button>
                 <button><a href="#">SignOut</a></button>
             </ul>
+
+            <form action="/action_page.php">
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname" value="Chris"><br>
+                <label for="lname">Last name:</label>
+                <input type="text" id="lname" name="lname" value="Matlala"><br><br>
+                <input type="submit" value="submit">
+            </form>
             
             <h1 class="main_heading">WELCOME TO SPARKLEPRO CLEANING SERVICES</h1>
 
