--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <button><a href="#">SignOut</a></button>
             </ul>
 
-            <form action="/action_page.php">
+            <form action="/action_page.php" target="_blank">
                 <label for="fname">First name:</label><br>
                 <input type="text" id="fname" name="fname" value="Chris"><br>
                 <label for="lname">Last name:</label>
