--- a/page.html
+++ b/page.html
@@ -1,7 +1,31 @@
 <html>
     <head>
+        <title>SparklePro | About Us</title>
+        <link rel="icon" type="image/x-icon" href="images/s.png">
+
+        <link rel="stylesheet" href="css/files.css">
+
+        <style>
+            body {
+                background-color:lightgray;
+            }
+        </style>
     </head>
     <body>
+        <nav class="navbar"></nav>
+        <div class="navdiv">
+         <div class="logo"><a href="#">SparklePro</a> </div>
+        </div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <button><a href="#">SignIn</a></button>
+            <button><a href="#">SignOut</a></button>
+            </ul>
+            
         <div class="wrapper">
             <form action="">
                 <h1>Login</h1>
