--- a/page.html
+++ b/page.html
@@ -17,6 +17,7 @@
          <div class="logo"><a href="#">SparklePro</a> </div>
         </div>
         <ul>
+            <li><a href="page.html">Page</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="news.html">News</a></li>
@@ -25,7 +26,7 @@
             <button><a href="#">SignIn</a></button>
             <button><a href="#">SignOut</a></button>
             </ul>
-            
+
         <div class="wrapper">
             <form action="">
                 <h1>Login</h1>
