--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
              <div class="logo"><a href="#">SparklePro</a> </div>
             </div>
             <ul>
+                <li><a href="page.html">Page</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="news.html">News</a></li>
