--- a/page.html
+++ b/page.html
@@ -7,7 +7,8 @@
 
         <style>
             body {
-                background-color:lightgray;
+                background-image:url('img_cleanliness.jpg');
+                background-size:cover;
             }
         </style>
     </head>
