--- a/page.html
+++ b/page.html
@@ -7,7 +7,7 @@
 
         <style>
             body {
-                background-image:url('img_cleanliness.jpg');
+                background-image:url('images/cleanliness.jpg');
                 background-size:cover;
             }
         </style>
