--- a/index.html
+++ b/index.html
@@ -57,24 +57,17 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
             </ul>
-
-            <form action="/action_page.php" target="_blank">
-                <label for="fname">First name:</label><br>
-                <input type="text" id="fname" name="fname" value="Chris"><br>
-                <label for="lname">Last name:</label>
-                <input type="text" id="lname" name="lname" value="Matlala"><br><br>
-                <input type="submit" value="submit">
-            </form>
             
             <h1 class="main_heading">WELCOME TO SPARKLEPRO CLEANING SERVICES</h1>
 
-           <p style="font-size:120%;font-family:'Times New Roman', Times, serif;color:navy">At SparklePro Cleaning Services,
+           <p style="font-size:120%;font-family:'Times New Roman', Times, serif;color:black>At SparklePro Cleaning Services,
              we believe a clean space is a happy place. Founded in 2023,
               our mission is to provide top-quality, professional cleaning services for homes, offices and
               commercial properties. With our dedicated team and eco-friendly products, we ensure your environment
               is spotless, fresh and healthy. With a focus on quality, customer satisfaction, and attention to
               detail, SparklePro Cleaing Services ensures that every space we touch shines with perfection.
            </p>
+           
            <h2 style="text-align: center;">WHY CHOOSE SPARKLEPRO</h2>
               <div>
               <p>1. Experienced & Reliable Team- Our trained professionals ensure quality and effeciency.</p>
