--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             <h1 class="main_heading">WELCOME TO SPARKLEPRO CLEANING SERVICES</h1>
 
-           <p style="font-size:120%;font-family:'Times New Roman', Times, serif;color: black;>At SparklePro Cleaning Services,
+           <p style="font-family:'Times New Roman', Times, serif;font-size: 120%;color: black;">At SparklePro Cleaning Services,
              we believe a clean space is a happy place. Founded in 2023,
               our mission is to provide top-quality, professional cleaning services for homes, offices and
               commercial properties. With our dedicated team and eco-friendly products, we ensure your environment
