--- a/index.html
+++ b/index.html
@@ -9,6 +9,50 @@
         
         <title>Navigation Bar</title>
 
+        <style>
+            .dropbtn {
+                background-color:#00be10;
+                color:beige;
+                padding:16px;
+                font-size:16px;
+                border:none;
+                cursor:pointer;
+            }
+
+            .dropdown {
+                position:relative;
+                display:inline-block;
+            }
+
+            .dropdown-content {
+                display:none;
+                position:absolute;
+                background-color:aliceblue;
+                min-width:160px;
+                box-shadow:0px 8px 16px 0px rgba(0,0,0,0);
+                z-index:1
+            }
+
+            .drpdown-content a {
+                color:black;
+                padding:12px 16px;
+                text-decoration:none;
+                display:block;
+            }
+
+            .dropdown-content a:hover {
+                background-color:#f1f1f1;
+            }
+
+            .dropdown:hover .dropdown-content {
+                display:block;
+            }
+
+            .dropdown:hover .dropbtn {
+                background-color:blue;
+            }
+        </style>
+
         <style type="text/css">
             {
                 text-decoration:none;
@@ -57,10 +101,18 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
             </ul>
+            <h2>Dropdown Menu</h2>
+            <p>Move the mouse over the button to open the dropdown menu.</p>
+
             <div class="dropdown">
-                <span>Mouse over me</span>
+                <button class="dropbtn">Dropdown</button>
                 <div class="dropdown-content">
-                    <p>Hello World!</p>
+                    <a href="page.html">Page</a>
+                    <a href="index.html">Home</a>
+                    <a href="services.html">Services</a>
+                    <a href="news.html">News</a>
+                    <a href="aboutus.html">About Us</a>
+                    <a href="contactus.html">Contact Us</a>
                 </div>
 
             </div>
