--- a/page.html
+++ b/page.html
@@ -28,6 +28,19 @@
             <button><a href="#">SignOut</a></button>
             </ul>
 
+            <div class="dropdown">
+                <button class="dropbtn">Dropdown</button>
+                <div class="dropdown-content">
+                    <a href="page.html">Page</a>
+                    <a href="index.html">Home</a>
+                    <a href="services.html">Services</a>
+                    <a href="news.html">News</a>
+                    <a href="aboutus.html">About Us</a>
+                    <a href="contactus.html">Contact Us</a>
+                </div>
+
+            </div>
+
         <div class="wrapper">
             <form action="">
                 <h1>Login</h1>
