--- a/services.html
+++ b/services.html
@@ -24,6 +24,19 @@
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
         </ul>
+
+        <div class="dropdown">
+          <button class="dropbtn">Dropdown</button>
+          <div class="dropdown-content">
+              <a href="page.html">Page</a>
+              <a href="index.html">Home</a>
+              <a href="services.html">Services</a>
+              <a href="news.html">News</a>
+              <a href="aboutus.html">About Us</a>
+              <a href="contactus.html">Contact Us</a>
+          </div>
+
+      </div>
         
         <br>
         <h1>SERVICES</h1>
