--- a/aboutus.html
+++ b/aboutus.html
@@ -25,6 +25,19 @@
             <li><a href="contactus.html">Contact Us</a></li>
             </ul>
 
+            <div class="dropdown">
+                <button class="dropbtn">Dropdown</button>
+                <div class="dropdown-content">
+                    <a href="page.html">Page</a>
+                    <a href="index.html">Home</a>
+                    <a href="services.html">Services</a>
+                    <a href="news.html">News</a>
+                    <a href="aboutus.html">About Us</a>
+                    <a href="contactus.html">Contact Us</a>
+                </div>
+
+            </div>
+
 
         <h1>ABOUT US</h1>
     
