--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </style>
         <style>
             body {
-                background-color:lightgray;
+                background-color:aqua;
             }
         </style>
 
