--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
 
         <style>
             body {
-                background-color:lightgray;
+                background-color:aqua;
             }
         </style>
     </head>
