--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
 
         <style>
             body {
-                background-color:lightgray;
+                background-color:aqua;
             }
         </style>
     </head>
