--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </style>
         <style>
             body {
-                background-color:aqua;
+                background-color:rgb(94, 202, 202);
             }
         </style>
 
