--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
 
         <style>
             body {
-                background-color:aqua;
+                background-color:rgb(94, 202, 202);
             }
         </style>
     </head>
