--- a/page.html
+++ b/page.html
@@ -41,7 +41,7 @@
 
             </div>
 
-        <div class="wrapper">
+        <div class="wrapper;">
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
