--- a/page.html
+++ b/page.html
@@ -41,10 +41,11 @@
 
             </div>
 
-        <div class="wrapper;">
+        <div class="container">
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
+                    
                     <input type="text" placeholder="Username" required>
                 </div>
                 <div class="input-box">
