--- a/page.html
+++ b/page.html
@@ -9,8 +9,17 @@
             body {
                 background-image:url('images/cleanliness.jpg');
                 background-size:cover;
+
+            }
+
+            .nav {
+                background-color: azure;
+                margin:0px;
+                padding:0px;
+
             }
         </style>
+
     </head>
     <body>
         <nav class="navbar"></nav>
@@ -45,7 +54,7 @@
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
-                    
+
                     <input type="text" placeholder="Username" required>
                 </div>
                 <div class="input-box">
