--- a/page.html
+++ b/page.html
@@ -12,7 +12,7 @@
 
             }
 
-            .nav {
+            .navbar {
                 background-color: azure;
                 margin:0px;
                 padding:0px;
