--- a/page.html
+++ b/page.html
@@ -22,7 +22,7 @@
 
     </head>
     <body>
-        <nav class="navbar"></nav>
+        <div class="navbar"></div>
         <div class="navdiv">
          <div class="logo"><a href="#">SparklePro</a> </div>
         </div>
