--- a/page.html
+++ b/page.html
@@ -22,33 +22,34 @@
 
     </head>
     <body>
-        <div class="navbar"></div>
-        <div class="navdiv">
-         <div class="logo"><a href="#">SparklePro</a> </div>
+        <div class="navbar">
+            <div class="navdiv">
+             <div class="logo"><a href="#">SparklePro</a> </div>
+                     </div>
+                         <ul>
+                                <li><a href="page.html">Page</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="news.html">News</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
+                                <li><a href="contactus.html">Contact Us</a></li>
+                                <button><a href="#">SignIn</a></button>
+                                <button><a href="#">SignOut</a></button>
+                                </ul>
+
+                                <div class="dropdown">
+                                    <button class="dropbtn">Dropdown</button>
+                                    <div class="dropdown-content">
+                                        <a href="page.html">Page</a>
+                                        <a href="index.html">Home</a>
+                                        <a href="services.html">Services</a>
+                                        <a href="news.html">News</a>
+                                        <a href="aboutus.html">About Us</a>
+                                        <a href="contactus.html">Contact Us</a>
+                                    </div>
+
+                 </div>
         </div>
-        <ul>
-            <li><a href="page.html">Page</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <button><a href="#">SignIn</a></button>
-            <button><a href="#">SignOut</a></button>
-            </ul>
-
-            <div class="dropdown">
-                <button class="dropbtn">Dropdown</button>
-                <div class="dropdown-content">
-                    <a href="page.html">Page</a>
-                    <a href="index.html">Home</a>
-                    <a href="services.html">Services</a>
-                    <a href="news.html">News</a>
-                    <a href="aboutus.html">About Us</a>
-                    <a href="contactus.html">Contact Us</a>
-                </div>
-
-            </div>
 
         <div class="container">
             <form action="">
