--- a/page.html
+++ b/page.html
@@ -13,7 +13,7 @@
             }
 
             .navbar {
-                background-color: azure;
+                background-color:crimson;
                 margin:0px;
                 padding:0px;
 
