--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 display:flex;align-items:center;justify-content:space-between;
             }
             .logo a{
-                font-size:40px;font-weight:500;color:crimson;
+                font-size:40px;font-weight:500;color:black;
             }
             li {
                 list-style:none;display:inline-block
