--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <style type="text/css">
             
             .navbar {
-                background:aqua;font-family:Arial, Helvetica, sans-serif;
-                padding-right: 15px;padding-left: 15px;
+                background-color:crimson;
+                margin:0px;
+                padding:0px;
+
             }
+            
             .navdiv {
                 display:flex;align-items:center;justify-content:space-between;
             }
