--- a/aboutus.html
+++ b/aboutus.html
@@ -9,32 +9,42 @@
             body {
                 background-color:rgb(94, 202, 202);
             }
+
+            .navbar {
+                background-color: crimson;
+                margin:0px;
+                padding:0px;
+            }
         </style>
     </head>
     <body>
         <nav class="navbar"></nav>
-        <div class="navdiv">
-         <div class="logo"><a href="#">SparklePro</a> </div>
-        </div>
-        <ul>
-            <li><a href="page.html">Page</a></li>
+             <ul>
+             <li><a href="page.html">Page</a></li>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="news.html">News</a></li>
                                 <li><a href="aboutus.html">About Us</a></li>
                                 <li><a href="contactus.html">Contact Us</a></li>
-            </ul>
+                                </ul>
 
-            <div class="dropdown">
-                <button class="dropbtn">Dropdown</button>
-                <div class="dropdown-content">
-                    <a href="page.html">Page</a>
-                    <a href="index.html">Home</a>
-                    <a href="services.html">Services</a>
-                    <a href="news.html">News</a>
-                    <a href="aboutus.html">About Us</a>
-                    <a href="contactus.html">Contact Us</a>
-                </div>
+            <div class="navdiv">
+             <div class="logo"><a href="#">SparklePro</a> </div>
+                     </div>
+
+
+
+
+                                 <div class="dropdown">
+                                      <button class="dropbtn">Dropdown</button>
+                                      <div class="dropdown-content">
+                                          <a href="page.html">Page</a>
+                                          <a href="index.html">Home</a>
+                                          <a href="services.html">Services</a>
+                                          <a href="news.html">News</a>
+                                          <a href="aboutus.html">About Us</a>
+                                          <a href="contactus.html">Contact Us</a>
+                                     </div>
 
             </div>
 
