--- a/services.html
+++ b/services.html
@@ -9,6 +9,12 @@
             body {
                 background-color:rgb(94, 202, 202);
             }
+
+            .navbar {
+                background-color:crimson;
+                margin:0px;
+                padding:0px;
+            }
         </style>
     </head>
     <body>
