--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     </ul>
 
             <div class="navdiv">
-                <div class="logo"><a href="#">SparklePro</a> </div>
+                <div class="logo"><a href="index.html">SparklePro</a> </div>
                </div>
 
 
