--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
                                 </ul>
 
             <div class="navdiv">
-             <div class="logo"><a href="#">SparklePro</a> </div>
+             <div class="logo"><a href="index.html">SparklePro</a> </div>
                      </div>
 
 
