--- a/contactus.html
+++ b/contactus.html
@@ -20,7 +20,7 @@
     <body>
         <nav class="navbar"></nav>
         <div class="navdiv">
-         <div class="logo"><a href="#">SparklePro</a> </div>
+         <div class="logo"><a href="index.html">SparklePro</a> </div>
         </div>
         <ul>
             <li><a href="page.html">Page</a></li>
