--- a/services.html
+++ b/services.html
@@ -19,14 +19,17 @@
     </head>
     <body>
       <nav class="navbar"></nav>
+      <div class="navdiv">
+        <div class="logo"><a href="index.html">SparklePro</a> </div>
+            </div>
            <ul>
-           <li><a href="page.html">Page</a></li>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="news.html">News</a></li>
-                            <li><a href="aboutus.html">About Us</a></li>
-                            <li><a href="contactus.html">Contact Us</a></li>
-                            </ul>
+              <li><a href="page.html">Page</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="news.html">News</a></li>
+              <li><a href="aboutus.html">About Us</a></li>
+              <li><a href="contactus.html">Contact Us</a></li>
+            </ul>
 
            <div class="navdiv">
             <div class="logo"><a href="index.html">SparklePro</a> </div>
