--- a/page.html
+++ b/page.html
@@ -11,6 +11,12 @@
                 background-size:cover;
             }
 
+            .navbar {
+                background-color:goldenrod;
+                margin:0px;
+                padding:0px;
+            }
+
         </style>
 
     </head>
