--- a/page.html
+++ b/page.html
@@ -54,7 +54,7 @@
                     <input type="text" placeholder="Username" required>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Pasword" required>
+                    <input type="password" placeholder="Password" required>
 
                 </div>
                 <div class="remember-forgot">
