--- a/page.html
+++ b/page.html
@@ -9,6 +9,7 @@
             body {
                 background-image:url('images/cleanliness.jpg');
                 background-size:cover;
+                align-items: center;
             }
 
 
