--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
 
         <style>
             body {
-                background-color:rgb(94, 202, 202);
+                background-color:rgba(81, 138, 138, 0.514);
             }
 
             .navbar {
