--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </style>
         <style>
             body {
-                background-color:rgb(94, 202, 202);
+                background-color:rgba(81, 138, 138, 0.514);
             }
         </style>
 
