--- a/page.html
+++ b/page.html
@@ -12,6 +12,12 @@
                 align-items: center;
             }
 
+            .navbar {
+                background-color: crimson;
+                margin:0px;
+                padding:0px;
+            }
+
 
         </style>
 
