--- a/news.html
+++ b/news.html
@@ -18,8 +18,8 @@
         </style>
     </head>
     <body>
-        
-        <nav class="navbar"></nav>
+        <nav>
+            <nav class="navbar"></nav>
         <div class="navdiv">
          <div class="logo"><a href="#">SparklePro</a> </div>
         </div>
@@ -42,6 +42,9 @@
                     <a href="aboutus.html">About Us</a>
                     <a href="contactus.html">Contact Us</a>
                 </div>
+
+            </div>
+        </nav>
 
             </div>
         
