--- a/contactus.html
+++ b/contactus.html
@@ -12,7 +12,8 @@
         </style>
     </head>
     <body>
-        <nav class="navbar"></nav>
+        <nav>
+            <nav class="navbar"></nav>
         <div class="navdiv">
          <div class="logo"><a href="index.html">SparklePro</a> </div>
         </div>
@@ -37,6 +38,7 @@
                 </div>
 
             </div>
+        </nav>
         
         <h1>CONTACT US</h1>
         <address style="font-size:120%;color:black">
