--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,8 @@
         </style>
     </head>
     <body>
-        <nav class="navbar"></nav>
+        <nav>
+            <nav class="navbar"></nav>
         <div class="navdiv">
             <div class="logo"><a href="index.html">SparklePro</a> </div>
         </div>
@@ -38,6 +39,7 @@
                         </div>
 
                     </div>
+        </nav>
 
 
         <h1>ABOUT US</h1>
