--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     </head>
         <body>
-            <nav class="navbar"></nav>
+            <nar>
+                <nav class="navbar"></nav>
             <div class="navdiv">
                 <div class="logo"><a href="index.html">SparklePro</a> </div>
                </div>
@@ -65,6 +66,7 @@
                       </div>
 
                     </div>
+            </nar>
             
             <h1 class="main_heading">WELCOME TO SPARKLEPRO CLEANING SERVICES</h1>
 
