--- a/services.html
+++ b/services.html
@@ -12,31 +12,35 @@
         </style>
     </head>
     <body>
-      <nav class="navbar"></nav>
-      <div class="navdiv">
-        <div class="logo"><a href="index.html">SparklePro</a> </div>
-            </div>
-           <ul>
-              <li><a href="page.html">Page</a></li>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="news.html">News</a></li>
-              <li><a href="aboutus.html">About Us</a></li>
-              <li><a href="contactus.html">Contact Us</a></li>
-            </ul>
+      <nav>
+        <nav class="navbar"></nav>
+        <div class="navdiv">
+            <div class="logo"><a href="index.html">SparklePro</a> </div>
+        </div>
+             <ul>
+               <li><a href="page.html">Page</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="services.html">Services</a></li>
+               <li><a href="news.html">News</a></li>
+               <li><a href="aboutus.html">About Us</a></li>
+               <li><a href="contactus.html">Contact Us</a></li>
+             </ul>
 
-                 <div class="dropdown">
-                  <button class="dropbtn">Dropdown</button>
-                    <div class="dropdown-content">
-                       <a href="page.html">Page</a>
-                       <a href="index.html">Home</a>
-                       <a href="services.html">Services</a>
-                       <a href="news.html">News</a>
-                       <a href="aboutus.html">About Us</a>
-                       <a href="contactus.html">Contact Us</a>
+
+                    <div class="dropdown">
+                      <button class="dropbtn">Dropdown</button>
+                        <div class="dropdown-content">
+                             <a href="page.html">Page</a>
+                             <a href="index.html">Home</a>
+                             <a href="services.html">Services</a>
+                             <a href="news.html">News</a>
+                             <a href="aboutus.html">About Us</a>
+                             <a href="contactus.html">Contact Us</a>
+                        </div>
+
                     </div>
-
-      </div>
+      </nav>
+      
         
         <br>
         <h1>SERVICES</h1>
