--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,10 @@
     </head>
     <body>
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
             <nav class="navbar"></nav>
         <div class="navdiv">
             <div class="logo"><a href="index.html">SparklePro</a> </div>
