--- a/contactus.html
+++ b/contactus.html
@@ -9,6 +9,10 @@
             body {
                 background-color:rgba(81, 138, 138, 0.514);
             }
+
+            navbar {
+                background:crimson;
+            }
         </style>
     </head>
     <body>
