--- a/contactus.html
+++ b/contactus.html
@@ -10,7 +10,7 @@
                 background-color:rgba(81, 138, 138, 0.514);
             }
 
-            navbar {
+            .navbar {
                 background:crimson;
             }
         </style>
