--- a/contactus.html
+++ b/contactus.html
@@ -12,6 +12,8 @@
 
             .navbar {
                 background:crimson;
+                margin:0px;
+                padding:0px;
             }
         </style>
     </head>
