--- a/index.html
+++ b/index.html
@@ -86,5 +86,9 @@
            
         <br>
         <img src="images/cleanliness.jpg" width="800" height="500">
+
+        <footer>
+            <p>Copyright @Chris</p>
+        </footer>
         </body>
 </html>
