--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 
         <footer>
             <p>Copyright @Chris</p>
+            <div class="footerContainer">
+
+            </div>
         </footer>
         </body>
 </html>
